# avito-contact-bot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: botctl.sh  launchd_botctl.sh  run_bot.sh
src/avito_contact_bot/: __init__.py  avito_api.py  bot.py  cli.py  models.py  settings.py  sheets.py  storage.py  sync_service.py  utils.py
